LPS-120967 Fix assignee name text overflow on workflow by assignee card

--- a/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_process-dashboard.scss
+++ b/modules/dxp/apps/portal-workflow/portal-workflow-metrics-web/src/main/resources/META-INF/resources/css/_process-dashboard.scss
@@ -163,6 +163,8 @@ $c: '.workflow-process-dashboard';
 	.assignee-name {
 		font-size: 0.75rem;
 		font-weight: bold;
+		width: auto;
+		word-break: break-all;
 	}
 
 	.empty-message {
